<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginlayout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/texthoten"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/texthoten"/>
            <EditText
                android:id="@+id/edthoten"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textbangcap"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/textbangcap"/>
            <RadioGroup
                android:id="@+id/radgroup"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/raddaihoc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/raddaihoc"/>
                <RadioButton
                    android:id="@+id/radcaodang"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/radcaodang"/>
                <RadioButton
                    android:id="@+id/radtrungcap"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/radtrungcap"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textsothich"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/textsothich"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkdocsach"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/checkdocsach"/>
                <CheckBox
                    android:id="@+id/checkdulich"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/checkdulich"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtsothichkhac"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnthem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/btnmargin"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btnthem" />

        <Button
            android:id="@+id/btnthoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btnmargin"
            android:backgroundTint="@color/btnColor"
            android:text="@string/btnthoat"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>